[package]
name = "MacTypes-sys"
version = "1.0.1"
authors = ["George Burton <burtonageo@gmail.com>"]
description = "Bindings for MacTypes.h"
license = "MIT"
homepage = "https://github.com/burtonageo/MacTypes-sys"
repository = "https://github.com/burtonageo/MacTypes-sys"
readme = "Readme.md"
keywords = ["types", "osx", "system", "bindings"]

[dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.2"
