[package]
name = "MacTypes-sys"
version = "1.1.0"
authors = ["George Burton <burtonageo@gmail.com>"]
description = "Bindings for MacTypes.h"
license = "MIT"
homepage = "https://github.com/burtonageo/MacTypes-sys"
repository = "https://github.com/burtonageo/MacTypes-sys"
documentation = "https://docs.rs/MacTypes-sys"
readme = "Readme.md"
keywords = ["types", "osx", "system", "bindings"]

[dependencies]
libc = { version = "0.2", default-features = false }
